fullSandbox11072023/force-app/main/default/objects/Maintenance_Objects__c/Maintenance_Objects__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Maintenance Objects</label>
</CustomObject>