fullSandbox11072023/force-app/main/default/objects/Maintenance_Objects__c/fields/Limit__c.field-meta.xml
<CustomField>
    <fullName>Limit__c</fullName>
    <inlineHelpText>How many rows is too many?</inlineHelpText>
    <label>Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>