fullSandbox11072023/force-app/main/default/objects/Maintenance_Objects__c/fields/Pretty_Name__c.field-meta.xml
<CustomField>
    <fullName>Pretty_Name__c</fullName>
    <label>Pretty Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>