fullSandbox11072023/force-app/main/default/objects/Maintenance_Objects__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Sales or PP for Pricing Portal</inlineHelpText>
    <label>Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>