fullSandbox11072023/force-app/main/default/objects/Maintenance_Objects__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Limit__c</columns>
    <columns>Type__c</columns>
    <columns>Pretty_Name__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>